project(cogui_keyboard VERSION 0.0.1 LANGUAGES CXX)

set(${PROJECT_NAME}_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/key.cpp)

add_library(${PROJECT_NAME} STATIC ${${PROJECT_NAME}_SOURCES})

set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(${PROJECT_NAME} PROPERTIES  VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
